--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-exp/
-pretrained/
+exp/*
+pretrained/*
 runs.sh
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-__pycache__/
+__pycache__/ 
 
 # Torch Models
 *.pkl
